--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -44,24 +44,24 @@
 }
 
 :root {
-  --radius: 0.625rem;
-  --background: oklch(1 0 0);
+  /* --radius: 0.625rem;
+  --background: oklch(2 1 0);
   --foreground: oklch(0.129 0.042 264.695);
-  --card: oklch(1 0 0);
+  --card: oklch(0 1 1);
   --card-foreground: oklch(0.129 0.042 264.695);
-  --popover: oklch(1 0 0);
+  --popover: oklch(1 2 0);
   --popover-foreground: oklch(0.129 0.042 264.695);
-  --primary: oklch(62.4%, 56.25%, 33.902%);
-  --primary-foreground: oklch(0.984 0.003 247.858);
-  --secondary: oklch(0.968 0.007 247.896);
-  --secondary-foreground: oklch(0.208 0.042 265.755);
-  --muted: oklch(0.968 0.007 247.896);
+  --primary: oklch(0.968 1 27.6);
+  --primary-foreground: oklch(0.84 0.03 47.58);
+  --secondary: oklch(0.968 1 247.896);
+  --secondary-foreground: oklch(1.508 1.542 1.755);
+  --muted: oklch(0.968 7.007 9.896);
   --muted-foreground: oklch(0.554 0.046 257.417);
-  --accent: oklch(0.968 0.007 247.896);
+  --accent: oklch(0.68 1 247.896);
   --accent-foreground: oklch(0.208 0.042 265.755);
   --destructive: oklch(0.577 0.245 27.325);
-  --border: oklch(0.929 0.013 255.508);
-  --input: oklch(0.929 0.013 255.508);
+  --border: oklch(0.529 0.013 255.508);
+  --input: oklch(0.929 0.413 255.508);
   --ring: oklch(0.704 0.04 256.788);
   --chart-1: oklch(0.646 0.222 41.116);
   --chart-2: oklch(0.6 0.118 184.704);
@@ -75,8 +75,36 @@
   --sidebar-accent: oklch(0.968 0.007 247.896);
   --sidebar-accent-foreground: oklch(0.208 0.042 265.755);
   --sidebar-border: oklch(0.929 0.013 255.508);
-  --sidebar-ring: oklch(0.704 0.04 256.788);
+  --sidebar-ring: oklch(0.704 0.04 256.788); */
+  
+    --background: oklch(100% 0 0);
+    --foreground: oklch(27% 0.02 262);
+    --card: oklch(100% 0 0);
+    --card-foreground: oklch(27% 0.02 262);
+    --popover: oklch(100% 0 0);
+    --popover-foreground: oklch(27% 0.02 262);
+    --primary: oklch(63% 0.24 27);
+    --primary-foreground: oklch(97% 0.01 240);
+    --secondary: oklch(96% 0.01 240);
+    --secondary-foreground: oklch(35% 0.02 262);
+    --muted: oklch(96% 0.01 240);
+    --muted-foreground: oklch(60% 0.03 245);
+    --accent: oklch(50% 0.02 260);
+    --accent-foreground: oklch(40% 0.03 245);
+    --destructive: oklch(65% 0.25 29);
+    --destructive-foreground: oklch(97% 0.01 240);
+    --border: oklch(91% 0.02 244);
+    --input: oklch(91% 0.02 244);
+    --ring: oklch(27% 0.02 262);
+    --chart-1: oklch(70% 0.18 30);
+    --chart-2: oklch(58% 0.15 180);
+    --chart-3: oklch(35% 0.08 210);
+    --chart-4: oklch(75% 0.20 80);
+    --chart-5: oklch(72% 0.25 45);
+    --radius: 0.5rem;
 }
+
+
 
 .dark {
   --background: oklch(0.129 0.042 264.695);
@@ -120,6 +148,9 @@
     @apply bg-background text-foreground;
   }
   .container{
-    @apply mx-auto px-4 md:px-8 lg:px-12;
+    @apply mx-auto px-4 md:px-8 lg:px-28;
+  }
+  .section-gap{
+    @apply my-10 md:my-20;
   }
 }
